--- a/tokodewi.com/css/style.css
+++ b/tokodewi.com/css/style.css
@@ -1,9 +1,8 @@
 body {
   margin: 0;
-  text-align: center;
   font-family: sans-serif;
   background-attachment: fixed;
-  background-image: url("img/bg-web-dewi.png");
+  background-image: url("/yudhaprasetya.github.io/tokodewi.com/img/bg-web-dewi.png");
   background-size: 100% 100%;
 }
 
@@ -31,4 +30,20 @@ body {
   background-color: rgba(255, 255, 255, 0.3);
   overflow: hidden;
   padding: 48px;
+}
+
+.img_menu {
+  color: white;
+
+}
+
+p {
+  font-size: 38px;
+}
+img {
+  margin-right: 20px;
+  margin-left: 20px;
+  width: 150px;
+  height: 150px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
